tests/ui/mismatched_types/non_zero_coerce_fail_infer.stderr
error[E0282]: type annotations needed
  --> $DIR/non_zero_coerce_fail_infer.rs:12:14
   |
LL |     foo(x as _);
   |              ^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
